fix for overflow on tablet screens; change text orientation in dropbutton

--- a/scss/misc-ui-components.scss
+++ b/scss/misc-ui-components.scss
@@ -11,10 +11,13 @@
 // Used by forms/components/SearchSelectionMenu.js
 
 .search-selection-menu.dropdown {
+    max-width: calc(100% - 96px);
+    
     button.btn.dropdown-toggle {
         max-width: 100%;
         overflow-x: hidden;
         text-overflow: ellipsis;
+        direction: rtl; // Show the last few numbers of @IDs on overflow-ellipsis; might need to change if expanding use elsewhere
     }
     > div.search-selection-menu-body.dropdown-menu {
         max-width: 300px;
